<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remember It</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reminders">Reminders</string>
    <string name="locations">Locations</string>
    <string name="locations_title">Locations</string>
    <string name="set_current">Set Current</string>
    <string name="menu_delete">Delete</string>
    <string name="home_name">Home</string>
    <string name="office_name">Office</string>
    <string name="location">Location</string>
	<string name="add_reminder">Add Reminder</string>
	<string name="edit_reminder">Edit Reminder</string>
        
    <string name="select_location">Where are you now?</string>
    <string name="notification_title">Remember it!</string>

    <string name="reminder_hint">Remember to...</string>

    <string name="no_wifi_title">Wifi Not Connected</string>
    <string name="no_wifi_message">You have to be connected to wifi for creating new locations.
                                    Please connect to a wifi hotspot and try again.</string>
    <string name="on">ON </string>
    <string name="off">OFF</string>

    <string name="when">WHEN</string>
    <string name="arriving">Arriving</string>
    <string name="leaving">Leaving</string>
    <string name="repeat">REPEAT</string>
    <string name="repeat_on">Always</string>
    <string name="repeat_off">Once</string>
    <string name="repeat_toggle">REPEAT</string>
    
    <string name="new_reminders">You have new reminders!</string>
    <!-- 
    <string name="calibrate_title">Improve Accuracy</string>
    <string name="calibrate_msg">To improve wifi detection walk outside the selected location</string>
    <string name="calibrate_ok">Iam out</string>
    <string name="calibrate_later">Maybe later</string>
    <string name="calibrate_dismiss">Don't show this again</string> -->
    <string name="location_name">Location Name</string>
    <string name="wifi_name">Wifi Name</string>
    <string name="edit_location">Edit Location</string>
</resources>
